--- a/backend/Вопросы.md
+++ b/backend/Вопросы.md
@@ -119,3 +119,78 @@ Shallow copy создает новое объектное представлен
 
 Вопрос:
 Отличие git merge и git rebase. Зачем нужен git rebase
+
+Вопрос:
+Объясните, как использовать Redis для реализации очередей сообщений (message queues).
+Ответ:
+Redis можно использовать для реализации очередей сообщений с помощью типов данных list или stream.
+
+Вопрос:
+Что такое race condition и как его предотвратить?
+
+Вопрос:
+Как защитить API от несанкционированного доступа?
+
+Вопрос:
+Как бы вы организовали систему для обработки потоковых данных?
+
+Вопрос:
+Чем отличаются REST и GraphQL?
+
+Вопрос:
+Чем процесс отличается от потока?
+
+Вопрос:
+Что такое интеграционное тестирование, и зачем оно нужно?
+
+Вопрос:
+В чем различие между async и threading подходами?
+
+Вопрос:
+Как будет себя вести 1 Singelton в многопоточный среде?
+
+Вопрос:
+Что такое concurrency и parallelism, и чем они отличаются?
+
+Вопрос:
+Опишите основные компоненты Apache Kafka и его применимость в современных приложениях.
+Ответ:
+Apache Kafka состоит из брокеров, тем и потребителей. Он используется для организации потокового обмена данными и позволяет масштабируемо обрабатывать потоки данных с высокими скоростями как для записи, так и для чтения. Его чаще всего применяют в приложениях, требующих высокой доступности и надежности.
+
+Вопрос:
+Что такое gRPC, и как его использовать?
+
+Вопрос:
+Как настроить мониторинг веб-приложения?
+
+Вопрос:
+Что такое фикстуры в тестах?
+
+Вопрос:
+По какому принципу работает связка Kafka - Kafka consumer, сетевое взаимодействие (TCP) ?
+
+Вопрос:
+Какие существуют методы защиты от XSS атак?
+
+Вопрос:
+Как можно использовать Redis как брокер сообщений?
+Ответ:
+Используйте метод publish для отправки сообщений и subscribe для их получения. Обработчики сообщений могут быть реализованы в виде функций, которые вызываются при получении новых данных.
+
+Вопрос:
+Расскажи про SOLID
+Ответ:
+S - Single Responsibility Principle — принцип единственной ответственности
+Каждый класс должен отвечать только за одну зону ответственности (действий), чтобы его было проще дополнять и менять.
+
+O - Open Closed Principle — принцип открытости-закрытости
+Класс должен быть закрыт для изменения, но открыт для расширения. Пишем код так, чтобы другие могли легко расширить функционал, не меняя написанный (оттестированный, понравившийся твоему начальнику) код.
+
+L - Liskov Substitution Principle — принцип подстановки Барбары Лисков
+Если в коде программы Базовый класс заменить на его Наследника, то программа должна работать, так как в Наследнике есть все операции, которые были в Базовом. В Базовый класс нужно выносить только общую логику, которую наследники будут реализовывать. Наследников создаем только тогда, когда они правильно собираются реализовать логику Базового класса без проблем.
+
+I - Interface Segregation Principle — принцип разделения интерфейса
+Клиенты не должны зависеть от интерфейсов, которые они не используют. Большие интерфейсы следует разбивать на интерфейсы поменьше. Так клиенты смогут использовать только те интерфейсы, которые им нужны.
+
+D - Dependency Inversion Principle — принцип инверсии зависимостей
+Модули верхних уровней не должны зависеть от модулей нижних уровней. Оба типа модулей должны зависеть от абстракций. Абстракции не должны зависеть от реализации. Реализация должна зависеть от абстракции.
