--- a/backend/Вопросы_Алгоритмы.md
+++ b/backend/Вопросы_Алгоритмы.md
@@ -22,3 +22,23 @@
 
 Вопрос:
 Как реализовать сортировку слиянием (Merge Sort)? Объясните ваши шаги
+
+Вопрос:
+Какие есть плюсы и минусы использования списков?
+
+Вопрос:
+Чем отличается сложность поиска и вставки в списке и в словаре?
+
+Вопрос:
+Как работает хэш-таблица?
+Ответ:
+Хэш-таблица это разреженный массив (массив, в котором имеются незаполненные позиции). В стандартных англоязычных учебниках ячейки хэш-таблицы называются "bucket". В хэш-таблице dict каждому элементу соотвествует ячейка, содержащая два поля: ссылку на ключ и ссылку на значение элемента. Поскольку размер всех ячеек одинаков, доступ к отдельной ячейке производится по смещению.
+
+Python стремится оставить не менее трети ячеек пустыми; если хэш-таблица становится чрезмерно заполненной, то она копируется в новый участок памяти.
+
+Для помещения элемента в хэш-таблицу нужно первым делом вычислить хэш-значение ключа элемента. Это делает встроенная функция hash().
+
+Для выборки значения с помощью выражения my_dict[search_key]. Python обращается к функции hash(search_key), чтобы получить хэш-значение search_key, и использует несколько младших битов полученного числа как смещение ячейки относительно начала хэш-таблицы (сколько именно битов зависит от текущего размера таблицы). Если найденная ячейка пуста, возбуждается исключение KeyError. В противном случае в найденной ячейке есть какой-то элемент - пара ключ:значение - и тогда Python проверяет, верно ли то, что search_key == found_key. Если да, то элемент найден и возвращается found_value. Если же search_key и found_key не совпали, то имеет место коллизия хэширования. Для разрешения коллизии алгоритм берет различные биты хэш-значения, производит над ними определенные действия и использует результат как смещение другой ячейки.
+
+Вопрос:
+Как измерить эффективность алгоритмов? Объясните понятие Big O
