--- a/backend/Задании.md
+++ b/backend/Задании.md
@@ -125,3 +125,30 @@ return memo[n]
 print(fibonacci(10))
 print(fibonacci(20))
 ```
+
+## Вопрос:
+
+Реализуйте функцию для нахождения второго по величине элемента в списке.
+
+## Ответ:
+
+```python
+def second_largest(numbers):
+  unique_numbers = list(set(numbers))
+  unique_numbers.sort()
+  return unique_numbers[-2] if len(unique_numbers) >= 2 else None
+```
+
+## Вопрос:
+
+Напишите генератор, который будет генерировать бесконечную последовательность Фибоначчи.
+
+## Ответ:
+
+```python
+def fibonacci():
+  a, b = 0, 1
+  while True:
+    yield a
+    a, b = b, a + b
+```
