--- a/golang/Вопросы.md
+++ b/golang/Вопросы.md
@@ -9,3 +9,12 @@
 
 Вопрос:
 Как оптимизировать производительность в Golang
+
+Вопрос:
+Что такое deadlock и как его избежать в многопоточности?
+
+Вопрос:
+Зачем нужен context?
+
+Вопрос:
+Когда интерфейс равен nil?
